--- a/module_map/src/main/res/layout/map_dialog_tip.xml
+++ b/module_map/src/main/res/layout/map_dialog_tip.xml
@@ -52,7 +52,7 @@
             app:layout_constraintEnd_toStartOf="@+id/map_tv_tip_positive"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/map_tv_tip_text"
-            tools:text="取消" />
+            android:text="取消" />
 
         <TextView
             android:id="@+id/map_tv_tip_positive"
@@ -68,7 +68,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/map_tv_tip_deny"
             app:layout_constraintTop_toBottomOf="@+id/map_tv_tip_text"
-            tools:text="确定" />
+            android:text="确定" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
