--- a/module_map/src/main/res/layout/map_recycle_item_search_history.xml
+++ b/module_map/src/main/res/layout/map_recycle_item_search_history.xml
@@ -23,9 +23,13 @@
 
     <ImageView
         android:id="@+id/map_iv_search_history_icon"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
+        android:layout_width="31dp"
+        android:layout_height="31dp"
         android:layout_marginEnd="16dp"
+        android:paddingStart="8dp"
+        android:paddingTop="8dp"
+        android:paddingEnd="8dp"
+        android:paddingBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
