--- a/lib_common/src/main/res/values-night/colors.xml
+++ b/lib_common/src/main/res/values-night/colors.xml
@@ -399,5 +399,10 @@
     <color name="map_divider_color" tools:ignore="ResourceName">#202020</color>
     <color name="map_main_background" tools:ignore="ResourceName">#000101</color>
     <color name="map_detail_background" tools:ignore="ResourceName">#2E2E2E</color>
+    <color name="map_dialog_transparent" tools:ignore="ResourceName">#00000000</color>
+    <color name="map_download_progressbar_background" tools:ignore="ResourceName">#E7EFFD</color>
+    <color name="map_download_progressbar" tools:ignore="ResourceName">#4B44E5</color>
+    <color name="map_download_text" tools:ignore="ResourceName"> #F0F0F2</color>
+
 </resources>
 
