[fix]所有文本规范到string；修正收藏点击逻辑、列表缓存逻辑；默认半展开底部栏

--- a/module_map/src/main/res/layout/map_fragment_all_picture.xml
+++ b/module_map/src/main/res/layout/map_fragment_all_picture.xml
@@ -4,6 +4,8 @@
     android:id="@+id/map_root_all_picture"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
+    android:focusable="true"
     android:background="@color/map_all_picture_background">
 
     <ImageView
