--- a/module_map/src/main/res/layout/map_recycle_item_search_history.xml
+++ b/module_map/src/main/res/layout/map_recycle_item_search_history.xml
@@ -9,17 +9,20 @@
 
     <TextView
         android:id="@+id/map_tv_search_history_place_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="10dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="10dp"
         android:textColor="@color/map_search_history_item_text_color"
+        android:singleLine="true"
         android:textSize="@dimen/map_search_history_item_place_name_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/map_iv_search_history_icon"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="不开心时想去的点" />
+        tools:text="不开心时想去的点55555555555555555555555555555555555" />
 
     <ImageView
         android:id="@+id/map_iv_search_history_icon"
