[fix]修复搜索框长度超出限制；修改为当没有历史记录时不显示“清空历史记录”按钮；放大各个按钮的点击区域

--- a/module_map/src/main/res/layout/map_fragment_place_detail_container.xml
+++ b/module_map/src/main/res/layout/map_fragment_place_detail_container.xml
@@ -91,8 +91,12 @@
 
                         <ImageView
                             android:id="@+id/map_iv_detail_favorite"
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:paddingStart="10dp"
+                            android:paddingTop="10dp"
+                            android:paddingEnd="10dp"
+                            android:paddingBottom="10dp"
                             app:layout_constraintBottom_toBottomOf="@+id/map_rv_detail_place_attribute"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="@+id/map_tv_detail_place_name"
@@ -142,6 +146,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="16dp"
+                            android:paddingTop="10dp"
+                            android:paddingBottom="10dp"
                             android:text="@string/map_place_detail_upload"
                             android:textColor="@color/map_text_detail_share"
                             android:textSize="13sp"
@@ -163,7 +169,7 @@
                             android:id="@+id/map_tv_detail_about_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="32dp"
+                            android:layout_marginTop="12dp"
                             android:text="@string/map_place_detail_about"
                             android:textColor="@color/map_detail_place_more_text_color"
                             android:textSize="15sp"
@@ -175,6 +181,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="8dp"
+                            android:paddingTop="10dp"
+                            android:paddingBottom="10dp"
                             android:text="@string/map_place_detail_more"
                             android:textColor="@color/map_text_detail_more_color"
                             android:textSize="12sp"
