--- a/module_map/src/main/res/layout/map_fragment_all_picture.xml
+++ b/module_map/src/main/res/layout/map_fragment_all_picture.xml
@@ -10,12 +10,14 @@
 
     <ImageView
         android:id="@+id/map_iv_all_picture_back"
-        android:layout_width="10dp"
+        android:layout_width="30dp"
         android:layout_height="0dp"
-        android:layout_marginStart="15dp"
+        android:layout_marginLeft="6dp"
         android:layout_marginTop="15dp"
         android:adjustViewBounds="false"
         android:fitsSystemWindows="false"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:src="@drawable/map_ic_back"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -47,6 +49,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="15dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:text="@string/map_place_detail_upload"
         android:textColor="@color/map_all_picture_text_share"
         android:textSize="13sp"
