--- a/module_map/src/main/res/layout/map_fragment_main.xml
+++ b/module_map/src/main/res/layout/map_fragment_main.xml
@@ -24,7 +24,7 @@
                 android:id="@+id/map_et_search"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="6dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/map_shape_search_background"
@@ -47,11 +47,13 @@
 
             <ImageView
                 android:id="@+id/map_iv_back"
-                android:layout_width="10dp"
+                android:layout_width="30dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="6dp"
                 android:adjustViewBounds="false"
                 android:fitsSystemWindows="false"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
                 app:layout_constraintBottom_toBottomOf="@+id/map_et_search"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/map_et_search"
