--- a/module_map/src/main/res/layout/map_dialog_download.xml
+++ b/module_map/src/main/res/layout/map_dialog_download.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="314dp"
-    android:layout_height="181dp"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="30dp"
     android:layout_marginRight="30dp"
     android:background="@drawable/map_shape_dialog_tip_background"
