--- a/module_map/src/main/res/layout/map_fragment_map_view.xml
+++ b/module_map/src/main/res/layout/map_fragment_map_view.xml
@@ -89,19 +89,19 @@
                     android:id="@+id/map_iv_vr"
                     android:layout_width="36dp"
                     android:layout_height="36dp"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginTop="30dp"
+                    android:layout_marginLeft="16dp"
                     android:scaleType="centerCrop"
                     android:src="@drawable/map_ic_vr"
+                    app:layout_constraintBottom_toBottomOf="@+id/map_iv_compass"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="@+id/map_iv_compass" />
 
                 <com.mredrock.cyxbs.discover.map.component.ClickView
                     android:id="@+id/map_iv_compass"
                     android:layout_width="66dp"
                     android:layout_height="66dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginEnd="15dp"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginRight="16dp"
                     android:scaleType="centerCrop"
                     android:src="@drawable/map_ic_compass"
                     app:layout_constraintRight_toRightOf="parent"
