[optimize]根据视觉图修改了某些布局文件;修复切换黑夜模式后特定的情景出现闪退情况

--- a/module_map/src/main/res/layout/map_fragment_map_view.xml
+++ b/module_map/src/main/res/layout/map_fragment_map_view.xml
@@ -22,15 +22,14 @@
             <LinearLayout
                 android:id="@+id/map_ll_map_view_my_favorite"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_height="54dp"
                 android:layout_marginEnd="8dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
                 android:gravity="center_horizontal"
                 android:orientation="vertical"
                 android:paddingStart="4dp"
-                android:paddingTop="4dp"
+                android:paddingTop="8dp"
                 android:paddingEnd="4dp"
                 android:paddingBottom="4dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +55,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginStart="8dp"
-                android:paddingStart="15dp"
+                android:paddingStart="8dp"
                 android:paddingEnd="1dp"
                 app:layout_constraintBottom_toBottomOf="@+id/map_ll_map_view_my_favorite"
                 app:layout_constraintEnd_toStartOf="@+id/map_view_divider"
@@ -75,7 +74,6 @@
                     android:id="@+id/map_layout"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_marginTop="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
