--- a/module_map/src/main/res/layout/map_recycle_item_detail_attribute.xml
+++ b/module_map/src/main/res/layout/map_recycle_item_detail_attribute.xml
@@ -6,7 +6,7 @@
     android:paddingStart="0dp"
     android:paddingTop="10dp"
     android:paddingEnd="12dp"
-    android:paddingBottom="10dp">
+    android:paddingBottom="8dp">
 
 
     <TextView
@@ -21,8 +21,9 @@
         android:paddingBottom="3dp"
         android:textAlignment="center"
         android:textColor="@color/map_text_detail_attribute"
-        android:textSize="@dimen/map_search_edit_text_size"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
