--- a/module_map/src/main/res/layout/map_recycle_item_detail_tag.xml
+++ b/module_map/src/main/res/layout/map_recycle_item_detail_tag.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:paddingStart="0dp"
     android:paddingEnd="12dp"
-    android:paddingBottom="10dp">
+    android:paddingBottom="12dp">
 
 
     <TextView
@@ -14,13 +14,13 @@
         android:layout_height="wrap_content"
         android:background="@drawable/map_shape_detail_tag"
         android:gravity="center"
-        android:paddingLeft="10dp"
-        android:paddingTop="5dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="5dp"
+        android:paddingLeft="11dp"
+        android:paddingTop="4dp"
+        android:paddingRight="11dp"
+        android:paddingBottom="4dp"
         android:textAlignment="center"
         android:textColor="@color/map_text_detail_tag"
-        android:textSize="@dimen/map_search_edit_text_size"
+        android:textSize="13dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
