--- a/module_map/src/main/res/layout/map_recycle_item_symbol_places.xml
+++ b/module_map/src/main/res/layout/map_recycle_item_symbol_places.xml
@@ -2,10 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:paddingStart="0dp"
-    android:paddingEnd="20dp"
-    android:paddingBottom="10dp">
+    android:layout_height="54dp"
+    android:paddingStart="14dp">
 
 
     <androidx.appcompat.widget.AppCompatCheckedTextView
@@ -21,7 +19,6 @@
         android:textSize="@dimen/map_search_edit_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
@@ -31,6 +28,6 @@
         android:scaleType="centerCrop"
         android:src="@drawable/map_ic_hot"
         app:layout_constraintBottom_toTopOf="@id/map_tv_recycle_item_symbol"
-        app:layout_constraintRight_toRightOf="@id/map_tv_recycle_item_symbol"
+        app:layout_constraintStart_toEndOf="@+id/map_tv_recycle_item_symbol"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
