--- a/module_map/src/main/res/layout/map_recycle_item_all_picture.xml
+++ b/module_map/src/main/res/layout/map_recycle_item_all_picture.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
+    android:layout_marginBottom="12dp"
     android:gravity="center">
 
 
